--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -1,28 +1,30 @@
+body {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 4em;
+  font-size: 18px;
+  text-align: center;
+}
 nav  {
   list-style-type: none;
-  display: flex;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(111, 111, 111);
 }
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(111, 111, 111);
-  }
-  
-  li {
-    float: left;
-  }
-  
-  nav a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-  nav a:hover {
-    background-color: #111;
-  } 
+
+li {
+  float: left;
+}
+
+nav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background-color: #111;
+} 
