--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -7,6 +7,10 @@ body {
 }
 nav  {
   list-style-type: none;
+  display: flex;
+}
+ul {
+  list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
