--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -14,7 +14,10 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Roboto", sans-serif;
+  --heading-weight: 500;
+
   --paragraph-font: "Roboto", sans-serif;
+  --paragraph-weight: 100;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
@@ -45,6 +48,8 @@ img {
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
+  font-weight: var(--heading-weight);
+
   color: var(--headline-color-on-white);
 }
 h2 {
@@ -66,6 +71,7 @@ header > h1, header > h2 {
 }
 p {
   font-family: var(--paragraph-font);
+  font-weight: var(--heading-weight);
   color: var(--paragraph-color);
   padding: 1em;
 }
