--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,10 +7,10 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #276FBF   ;
+  --secondary-color: #F03A47 ;
+  --accent1-color: #8DE4FF;
+  --accent2-color: #FFFD82;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Roboto", sans-serif;
