--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -4,7 +4,7 @@ Any spaces in your font name should be replaced with a +.
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #276FBF   ;
@@ -15,9 +15,8 @@ Fonts are separated by a | */
   /* change the values below to your chosen font(s) */
   --heading-font: "Roboto", sans-serif;
   --heading-weight: 500;
-
-  --paragraph-font: "Roboto", sans-serif;
-  --paragraph-weight: 100;
+  --paragraph-font: "Montserrat", sans-serif;
+  --paragraph-weight: 200;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #242325;  /* headlines on a white background */ 
