--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -23,7 +23,7 @@ li {
 
 nav a {
   display: block;
-  color: white;
+  color: rgb(111, 111, 111);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
