--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,7 +1,8 @@
 #content {
     margin: 0 auto;
+    margin-top: 0 auto;
+    margin-bottom: 0 auto;
     max-width: 1600px;
-    text-align: center;
 }
 #hero-msg h1{
     text-align: center;
@@ -10,16 +11,79 @@
     text-align: center;
 
 }
+#hero-img {
+    width:  100%;
+}
 #background {
     height: 725px;
+    background-color: gray; 
+
 }
 
 .button-box {
     text-align: center;
+}
+.book, .join {
+    background-color: gray; 
+    color:rgba(20,30,13, .7);
+    text-decoration: none;
+
+}
+.book:hover, .join:hover {
+    background-color: gray; 
+    color:rgba(20,30,13, .7);
+
+}
+.msg {
+    background-color: gray; 
+
+}
+.msg h2{
+    color:rgba(20,30,13, .7);
+
+}
+.msg p {
+    color:rgba(20,30,13, .7);
+
+}
+.home-title {
+    color:rgba(20,30,13, .7);
+
+}
+.icon {
+    width:  80px;
+}
+.logo {
+    width:  80px;
 
 }
 body {
-    background-color: #fcfbfb; 
+    background-color: white; 
+
+}
+header {
+    background-color: rgba(20,30,13, .7);; 
+
+}
+footer {
+    background-color: gray; 
+
+}
+footer h3 {
+    color:rgba(20,30,13, .7);
+
+}
+footer h3 a:hover {
+    text-decoration: underline;
+
+}
+footer a {
+    color:rgba(20,30,13, .7);
+    text-decoration: none;
+
+}
+footer a:hover {
+    color:rgba(20,30,13, .7);
 
 }
 main section{
@@ -28,5 +92,17 @@ main section{
 }
 nav a {
     text-align: center;
+    color:rgba(20,30,13, .7);
+    text-decoration: none;
 
 }
+ nav a:hover {
+    background-color: black; 
+    color:rgba(20,30,13, .7);
+
+
+ }
+ h4 {
+    color:rgba(20,30,13, .7);
+
+ }
