--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,7 +1,7 @@
 #content {
     margin: 0 auto;
-    margin-top: 0 auto;
-    margin-bottom: 0 auto;
+    margin-top: 0;
+    margin-bottom: 0;
     max-width: 1600px;
 }
 #hero-msg h1{
