--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
 #content {
     margin: 0 auto;
     margin-top: 0;
@@ -19,6 +22,9 @@
     background-color: gray; 
 
 }
+#logo_link {
+    padding-top: 5px;
+}
 
 .button-box {
     text-align: center;
@@ -27,6 +33,12 @@
     background-color: gray; 
     color:rgba(20,30,13, .7);
     text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+
 
 }
 .book:hover, .join:hover {
@@ -34,24 +46,45 @@
     color:rgba(20,30,13, .7);
 
 }
+.h2 {
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid black;
+
+}
 .msg {
     background-color: gray; 
+    line-height: 1.5em;
+    padding: 35px;
+
 
 }
 .msg h2{
     color:rgba(20,30,13, .7);
-
+    font-family: "Roboto", sans-serif;
 }
 .msg p {
     color:rgba(20,30,13, .7);
-
+    font-family: "Montserrat", sans-serif;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 .home-title {
     color:rgba(20,30,13, .7);
+    font-family: "Roboto", sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+
 
 }
 .icon {
     width:  80px;
+    padding-top: 10px;
 }
 .logo {
     width:  80px;
@@ -59,6 +92,10 @@
 }
 body {
     background-color: white; 
+    font-family: "Montserrat", sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 
 }
 header {
@@ -67,10 +104,14 @@ header {
 }
 footer {
     background-color: gray; 
+    padding: 25px 50px;
+    margin-top: 200px;
 
 }
 footer h3 {
     color:rgba(20,30,13, .7);
+    font-family: "Montserrat", sans-serif;
+
 
 }
 footer h3 a:hover {
@@ -86,14 +127,21 @@ footer a:hover {
     color:rgba(20,30,13, .7);
 
 }
+footer .social img {
+    padding-top: 15px;
+}
 main section{
     text-align: center;
 
+}
+main section img {
+    box-sizing: border-box;
 }
 nav a {
     text-align: center;
     color:rgba(20,30,13, .7);
     text-decoration: none;
+    padding: 35px;
 
 }
  nav a:hover {
@@ -104,5 +152,7 @@ nav a {
  }
  h4 {
     color:rgba(20,30,13, .7);
+    font-family: "Montserrat", sans-serif;
+
 
  }
