--- a/wwr/styles/positionstyles.css
+++ b/wwr/styles/positionstyles.css
@@ -5,7 +5,7 @@
 
 }
 .red1 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 
@@ -17,7 +17,7 @@
 
 } 
 .yellow1 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: gold; 
 } 
