--- a/wwr/styles/positionstyles.css
+++ b/wwr/styles/positionstyles.css
@@ -2,77 +2,122 @@
 /* Activity 1 styles */
 .content1 {
   /* This is the parent of the activity 1 boxes. */
-
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  grid-gap: 20px;
 }
 .red1 { 
   width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1/3;
+
 
 } 
 .green1 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
 
 } 
 .yellow1 {
-  width: 100%; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: gold; 
 } 
 .blue1 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 1/3;
+
 } 
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  margin: 20px;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  justify-content: start;
+  justify-items: start;
+  align-items: stretch;
+
 }
 .red2 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1 / 3;
+  grid-row: 1 / 3; 
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
-  background-color: green; 
+  background-color: green;
+  grid-column: 2 / 4;
+  grid-row: 2 / 4; 
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 3 / 5;
+  grid-row: 3 / 5; 
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 4 / 6;
+  grid-row: 4 / 6; 
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  margin-bottom: 10px;
+  display: grid;
+  justify-items: stretch;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(4,1fr);
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1 / 3; 
+  grid-row: 4/5;
+  grid-row: 1/2;
+
+
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 45%; 
   background-color: green;
+  grid-column: 1/3;
+  grid-row: 2/4;
+  justify-self: start;
+
+
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 85%; 
+  background-color: gold;
+  grid-column: 2/3;
+  grid-row: 2/4;
+  justify-self: end;
+
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
   background-color: blue; 
+  grid-column: 1 / 3; 
+  grid-row: 4/5;
+
+
+
 } 
 /* Activity 4 styles */ 
 .content4 {
