--- a/wwr/styles/positionstyles.css
+++ b/wwr/styles/positionstyles.css
@@ -121,79 +121,121 @@
 } 
 /* Activity 4 styles */ 
 .content4 {
-  /* This is the parent of the activity 4 boxes. */
-  height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin: 10px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 300px; 
+
   background-color: red; 
+  grid-column: 1;
+  grid-row: 1/4;
 } 
 .green4 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: green; 
-} 
+}
 .yellow4 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 2;
+  grid-row: 2; 
 } 
 .blue4 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 2;
+  grid-row: 3; 
 } 
 /* Activity 5 styles */ 
 .content5 {
-  /* This is the parent of the activity 5 boxes. */
-  height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  justify-content: stretch;
+  overflow: auto;
+
 }
 .red5 { 
-  width: 100px; 
-  height: 100px; 
+  width: auto; 
+  height: auto; 
   background-color: red; 
+  grid-row: 1/3;
+  grid-column: 1/5;
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  display: block; 
+  width: 100%; 
+  height: 200px; 
   background-color: green; 
+  grid-row: 3/7;
+  grid-column: 1;
+  align-self: flex-start;
+  justify-self: start;
+  float:left;
+  order: 1;
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  display: block; 
+  width: 100%; 
   background-color: gold; 
-
+  grid-row: 3/8;
+  grid-column: 1/5;
+  align-self: flex-end;
+  justify-self: end;
+  clear: none;
 } 
 .blue5 {
-  width: 100px; 
-  height: 100px; 
+  width: auto; 
+  height: auto; 
   background-color: blue; 
+  grid-column: 1/5;
+  grid-row: 8/10;
 } 
 /* Activity 6 styles */ 
 .content6 {
-  /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+  grid-template-rows: repeat(6,1fr);
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: auto; 
+  height: auto; 
   background-color: red; 
+  grid-column: 1/4;
+  grid-row: 1/3;
+  order: 1;
 } 
 .green6 {
-  width: 100px; 
+  width: auto; 
   height: 100px; 
   background-color: green; 
+  grid-column: 1/3;
+  grid-row: 5/7;
+  order: 3;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: auto; 
+  height: auto; 
   background-color: gold; 
+  grid-column: 5/7;
+  grid-row: 3/7;
+  order: 4;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: auto; 
+  height: auto; 
   background-color: blue; 
+  grid-column: 2/6;
+  grid-row: 2/6;
+  order: 2;
 } 
 
 
