--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -24,13 +24,14 @@
   }
 
   p {
+    font-weight: 600;
     font-family: var(--paragraph-font);
     color: var(--paragraph-color);
-    padding: 1em;
+    padding: 0;
   }
   nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: left;
     background-color: var(--nav-background-color);
     line-height: 3em;
     text-align: center;
@@ -38,6 +39,11 @@
     list-style-type: none;
     display: flex;
   }
+h4 {
+margin-block-start: 0;
+margin-block-end: 0;
+
+}
 
   nav a {
     font-weight: 600;
@@ -65,7 +71,10 @@
 #img {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-top: -100px;
+    width:  100%;
+    height: 400px; 
+    object-fit: cover;
+
 }
 #div-img {
     display: grid;
@@ -88,14 +97,14 @@
     text-align: center;
 }
 
-#img {
-    width:  100%;
-}
+
 #img-contact {
     width:  100%;
 }
 #img-card {
     width: 100%;
+    height: 400px; 
+    object-fit: cover;
 }
 #background {
     height: 725px;
@@ -108,9 +117,63 @@
     justify-self: center;
     align-self: center;
 }
-#img-destino {
+#destino1{
+    margin-top: 100px;
+    display: grid;
+    grid-template: auto;
+}
+#msg-destino {
+    width: 50%;
+    margin-left: auto;
+    grid-row: 1/2;
+    grid-column: 1;
+    background-color: rgba(255,255,255, 0.5);
+    
 }
 
+#img-destino{
+    grid-row: 1/2;
+    grid-column: 1;
+}
+#destino2{
+    margin-top: 100px;
+    display: grid;
+    grid-template: auto;
+}
+#msg-destino2 {
+    width: 50%;
+    grid-row: 1/2;
+    grid-column: 1;
+    background-color: rgba(255,255,255, 0.5);
+
+}
+
+#destino3{
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+    display: grid;
+    grid-template: auto;
+}
+#msg-destino3 {
+    width: 50%;
+    margin-left: auto;
+    grid-row: 1/2;
+    grid-column: 1;
+    background-color: rgba(255,255,255, 0.5);
+
+
+}
+
+.home-grid{
+    display: block;
+}
+.img-content{
+    display: block;
+}
+.destino-grid{
+    display:block;
+}
 .rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
