--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -91,6 +91,12 @@ margin-block-end: 0;
     grid-row: 1/3;
     align-self: center;
 }
+#dots {
+  grid-column: 1/4;
+  grid-row: 2/3;
+  align-self: center;
+
+}
 #img-msg h1{
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
@@ -309,7 +315,6 @@ form {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
   position: relative;
   margin: auto;
 }
