--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -94,7 +94,7 @@ margin-block-end: 0;
 #dots {
   grid-column: 1/4;
   grid-row: 2/3;
-  align-self: center;
+  text-align: center;
 
 }
 #img-msg h1{
@@ -167,10 +167,50 @@ margin-block-end: 0;
     grid-row: 1/2;
     grid-column: 1;
     background-color: rgba(255,255,255, 0.5);
+}
+#text-travel1 {
+margin-top: 100px;  
+padding-inline: 50px;
+}
+#text-travel2 {
+  margin-top: 100px;  
+  padding-inline: 50px;
+}
+#travel-card {
+  padding-block: 100px;
+  display: grid;
+  grid-template-columns: 1fr 50px 1fr;
+  grid-row: 1fr 1fr;
+}
 
+#img-card1 {
+  width: 100%;
+  grid-column: 3/3;
+  grid-row: 1;
+
+}
+#img-card2 {
+  margin-top: 100px;
+  width: 100%;
+  grid-column: 1/2;
+  grid-row: 2;
+  
+}
+#text-card1 {
+  grid-column: 1/2;
+  grid-row: 1;
+  align-self: center;
 
 }
 
+#text-card2 {
+  margin-top: 100px;
+  grid-column: 3/3;
+  grid-row: 2;
+  align-self: center;
+
+
+}
 .home-grid{
     display: block;
 }
