--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -211,6 +211,19 @@ padding-inline: 50px;
 
 
 }
+.img {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width:  100%;
+  height: 400px; 
+  object-fit: cover;
+
+}
+.img-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
 .home-grid{
     display: block;
 }
