--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -126,7 +126,6 @@ margin-block-end: 0;
 #destino1{
     margin-top: 100px;
     display: grid;
-    grid-template: auto;
 }
 #msg-destino {
     width: 50%;
@@ -144,7 +143,6 @@ margin-block-end: 0;
 #destino2{
     margin-top: 100px;
     display: grid;
-    grid-template: auto;
 }
 #msg-destino2 {
     width: 50%;
@@ -159,7 +157,6 @@ margin-block-end: 0;
     margin-bottom: 100px;
 
     display: grid;
-    grid-template: auto;
 }
 #msg-destino3 {
     width: 50%;
@@ -180,7 +177,7 @@ padding-inline: 50px;
   padding-block: 100px;
   display: grid;
   grid-template-columns: 1fr 50px 1fr;
-  grid-row: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 #img-card1 {
