--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -208,6 +208,15 @@ padding-inline: 50px;
 
 
 }
+.img-card {
+  width: 100%;
+  height: 400px; 
+  object-fit: cover;
+}
+.img-destino{
+  grid-row: 1/2;
+  grid-column: 1;
+}
 .img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
