--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -102,6 +102,11 @@ margin-block-end: 0;
     color: var(--headline-color-on-white);
     text-align: center;
 }
+#img-msg h1{
+  font-family: var(--heading-font);
+  color: var(--headline-color-on-white);
+  text-align: center;
+}
 
 
 #img-contact {
