--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -101,21 +101,21 @@ margin-block-end: 0;
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
     text-align: center;
+    text-shadow: 2px 1px black;
+
+
 }
 #img-msg h1{
   font-family: var(--heading-font);
-  color: var(--headline-color-on-white);
+  color: var(--headline-color-on-color);
   text-align: center;
+  text-shadow: 2px 1px black;
+
 }
 
-
-#img-contact {
-    width:  100%;
-}
 #img-card {
     width: 100%;
     height: 400px; 
-    object-fit: cover;
 }
 #background {
     height: 725px;
@@ -211,8 +211,32 @@ padding-inline: 50px;
   grid-row: 2;
   align-self: center;
 
+}
+#h4-contact{
+  grid-column: 1;
+  grid-row: 1;
+  align-self: center;
+  text-align: center;
+}
+#img-contact{
+ grid-column: 3;
+ grid-row: 1/3;
+ width: 100%;
+ object-fit: fill;
 
 }
+
+
+.contact-box{
+  display: grid;
+  grid-template-columns: 1fr 50px 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin-block: 100px;
+  align-items: center;
+}
+
+
+
 .img-card {
   width: 100%;
   height: 400px; 
@@ -240,6 +264,8 @@ padding-inline: 50px;
 }
 .img-content{
     display: block;
+    object-fit: cover;
+
 }
 .destino-grid{
     display:block;
@@ -283,15 +309,13 @@ padding-inline: 50px;
 
 }
 .space-contactUs {
-    padding-top: 40px;
-    padding-bottom: 40px;
     align-items: center;
 }
 
 body {
     background-color: white; 
     font-family: var(--paragraph-font);
-    font-size: 22px;
+    font-size: 20px;
     margin: 0;
     padding: 0;
 
@@ -328,21 +352,25 @@ main section{
 main section img {
     box-sizing: border-box;
 }
-
+#form{
+  grid-column: 1;
+  grid-row: 2;
+}
 form {
     /* Center the form on the page */
     margin: 0 auto;
-    width: 420px;
+    width: 80%;
+    
     /* Form outline */
-    padding: 1em;
     border: 1px solid #CCC;
-    border-radius: 1em;
+    border-radius: .5em;
+    align-content: center;
   }
   
   ul {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-top: 1em;
   }
   
   form li + li {
@@ -351,25 +379,37 @@ form {
   
   label {
     display: inline-block;
-    width: 100px;
+    width: 30%;
     text-align: right;
   }
   
-  input,
-  textarea {
+  input{
     font: var(--paragraph-font);
-    width: 300px;
+    width: 60%;
     box-sizing: border-box;
     border: 1px solid #999;
     vertical-align: top;
-    height: 5em;
+    height: 30px;
+  }
+
+  textarea {
+    font: var(--paragraph-font);
+    width: 60%;
+    box-sizing: border-box;
+    border: 1px solid #999;
+    vertical-align: top;
+    height: 50px;
   }
   
   input:focus,
   textarea:focus {
     border-color: #000;
   }
-  
+  .li-button{
+    margin-top: 3%;
+    margin-right: 10%;
+    text-align: end;
+  }
   .button {
     padding-left: 90px; 
     margin-left: .5em;
