--- a/travel/styles/style.css
+++ b/travel/styles/style.css
@@ -214,15 +214,18 @@ padding-inline: 50px;
 }
 #h4-contact{
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 1/3;
+
   align-self: center;
   text-align: center;
 }
 #img-contact{
+  display: block;
  grid-column: 3;
  grid-row: 1/3;
  width: 100%;
  object-fit: fill;
+ order: 1;
 
 }
 
@@ -234,8 +237,6 @@ padding-inline: 50px;
   margin-block: 100px;
   align-items: center;
 }
-
-
 
 .img-card {
   width: 100%;
@@ -353,8 +354,8 @@ main section img {
     box-sizing: border-box;
 }
 #form{
-  grid-column: 1;
-  grid-row: 2;
+  grid-column: 3;
+  grid-row: 1/3;
 }
 form {
     /* Center the form on the page */
